# gazebo-bridge

./: CMakeLists.txt  DoxyFile  Gazebo2Robocomp.cdsl  README.md  README.md.new
Resources/Meshes/: lowpoly_dude.stl
Resources/Models/bridge_BasicHuman/meshes/: guy_rigged.dae
etc/: config  config_invertedpendulum  config_shapes
protobuf/: JoystickAdapter.proto
src/: CMakeLists.txt  CMakeListsSpecific.txt  camerargbdsimpleI.cpp  camerargbdsimpleI.h  config.h  differentialrobotI.cpp  differentialrobotI.h  gazebo2robocompI.cpp  gazebo2robocompI.h  genericworker.h  jointmotorsimpleI.cpp  jointmotorsimpleI.h  joystickadapterI.cpp  joystickadapterI.h  main.cpp  omnirobotI.cpp  omnirobotI.h  specificmonitor.cpp  specificworker.cpp  specificworker.h  topics.h
src/EntitiesControlPlugin/: CMakeLists.txt  EntitiesControl.cc  EntitiesControl.hh  README.md  runToolbox.sh  toolbox.sdf
src/protobuf/: JoystickAdapter.proto
